crates/tree-sitter-tribute/test/corpus/multiline_strings.txt
================================================================================
Basic multiline string
================================================================================

fn main() { #"hello"# }

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (keyword_fn)
    name: (identifier)
    body: (block
      (expression_statement
        (primary_expression
          (multiline_string
            (multiline_string_segment)))))))

================================================================================
Multiline string spanning lines
================================================================================

fn main() {
  #"
    hello
    world
  "#
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (keyword_fn)
    name: (identifier)
    body: (block
      (expression_statement
        (primary_expression
          (multiline_string
            (multiline_string_segment)))))))

================================================================================
Multiline string with double hash
================================================================================

fn main() { ##"contains "# inside"## }

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (keyword_fn)
    name: (identifier)
    body: (block
      (expression_statement
        (primary_expression
          (multiline_string
            (multiline_string_segment)))))))

================================================================================
Multiline string with interpolation
================================================================================

fn main() {
  let name = "world"
  #"hello \{name}"#
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (keyword_fn)
    name: (identifier)
    body: (block
      (let_statement
        (keyword_let)
        pattern: (pattern
          (simple_pattern
            (identifier_pattern
              (identifier))))
        value: (primary_expression
          (string
            (string_segment))))
      (expression_statement
        (primary_expression
          (multiline_string
            (multiline_string_segment)
            (multiline_interpolation
              expression: (primary_expression
                (identifier)))
            (multiline_string_segment)))))))

================================================================================
Multiline string with multiple interpolations
================================================================================

fn main() {
  let x = 1
  let y = 2
  #"x=\{x}, y=\{y}, sum=\{x + y}"#
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (keyword_fn)
    name: (identifier)
    body: (block
      (let_statement
        (keyword_let)
        pattern: (pattern
          (simple_pattern
            (identifier_pattern
              (identifier))))
        value: (primary_expression
          (nat_literal)))
      (let_statement
        (keyword_let)
        pattern: (pattern
          (simple_pattern
            (identifier_pattern
              (identifier))))
        value: (primary_expression
          (nat_literal)))
      (expression_statement
        (primary_expression
          (multiline_string
            (multiline_string_segment)
            (multiline_interpolation
              expression: (primary_expression
                (identifier)))
            (multiline_string_segment)
            (multiline_interpolation
              expression: (primary_expression
                (identifier)))
            (multiline_string_segment)
            (multiline_interpolation
              expression: (binary_expression
                (primary_expression
                  (identifier))
                (primary_expression
                  (identifier))))
            (multiline_string_segment)))))))

================================================================================
Basic multiline bytes
================================================================================

fn main() { b#"hello"# }

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (keyword_fn)
    name: (identifier)
    body: (block
      (expression_statement
        (primary_expression
          (multiline_bytes
            (multiline_bytes_segment)))))))

================================================================================
Multiline bytes with interpolation
================================================================================

fn main() {
  let data = "world"
  b#"hello \{data}"#
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (keyword_fn)
    name: (identifier)
    body: (block
      (let_statement
        (keyword_let)
        pattern: (pattern
          (simple_pattern
            (identifier_pattern
              (identifier))))
        value: (primary_expression
          (string
            (string_segment))))
      (expression_statement
        (primary_expression
          (multiline_bytes
            (multiline_bytes_segment)
            (multiline_bytes_interpolation
              expression: (primary_expression
                (identifier)))
            (multiline_bytes_segment)))))))
